// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inntekten din Skal rendre selvstendig 1`] = `
<div>
  <form>
    <div
      class="sc-irLvoH eNFBNd"
    >
      <h1
        class="center navds-heading navds-heading--medium"
      >
        inntektenDin.tittel
      </h1>
    </div>
    <fieldset
      class="sc-beyTiQ jltUnl"
    >
      <h1
        class="navds-heading navds-heading--small"
      >
        dinSituasjon.undertittel
      </h1>
      <p
        class="navds-body-long navds-body-long--medium"
      >
        dinSituasjon.ingress
      </p>
    </fieldset>
    <fieldset
      class="sc-beyTiQ jltUnl"
    >
      <div
        class="sc-guDMob czmIqC undefined"
      >
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            class="navds-label"
          >
            knapp.tilbake
          </span>
        </button>
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            class="navds-label"
          >
            knapp.neste
          </span>
        </button>
      </div>
    </fieldset>
    <div
      class="sc-guDMob sc-dmyDmy czmIqC kgmmuh"
    >
      <button
        class="navds-button navds-button--secondary navds-button--medium"
        id="avbryt-btn"
        type="button"
      >
        <span
          class="navds-label"
        >
          knapp.avbryt
        </span>
      </button>
    </div>
    <dialog
      class="navds-modal navds-modal--polyfilled navds-modal--autowidth"
      role="dialog"
    >
      <div
        class="navds-modal__header"
      >
        <button
          class="navds-modal__button navds-button navds-button--tertiary-neutral navds-button--small navds-button--icon-only"
          type="button"
        >
          <span
            class="navds-button__icon"
          >
            <svg
              aria-labelledby="title-r5"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="title-r5"
              >
                Lukk modalvindu
              </title>
              <path
                clip-rule="evenodd"
                d="M6.53 5.47a.75.75 0 0 0-1.06 1.06L10.94 12l-5.47 5.47a.75.75 0 1 0 1.06 1.06L12 13.06l5.47 5.47a.75.75 0 1 0 1.06-1.06L13.06 12l5.47-5.47a.75.75 0 0 0-1.06-1.06L12 10.94 6.53 5.47Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <h1
          class="navds-heading navds-heading--medium"
        >
          avbrytModal.spoersmaal
        </h1>
      </div>
      <div
        class="navds-modal__body"
      >
        <p
          class="mute avbryt-text navds-body-short navds-body-short--medium"
        >
          avbrytModal.informasjon
        </p>
      </div>
      <div
        class="navds-modal__footer"
      >
        <div
          class="sc-jsEeA-d gHwiqO"
        >
          <button
            class="navds-button navds-button--secondary navds-button--medium"
            id="avbryt-nei-btn"
            style="margin: 10px;"
            type="button"
          >
            <span
              class="navds-label"
            >
              avbrytModal.svarNei
            </span>
          </button>
          <button
            class="navds-button navds-button--primary navds-button--medium"
            id="avbryt-ja-btn"
            style="margin: 10px;"
            type="button"
          >
            <span
              class="navds-label"
            >
              avbrytModal.svarJa
            </span>
          </button>
        </div>
        <div
          class="sc-jsEeA-d gHwiqO"
        >
          <button
            class="navds-button navds-button--tertiary navds-button--medium"
            id="slett-soeknad"
            style="color: rgb(198, 93, 78);"
            type="button"
          >
            <span
              class="navds-label"
            >
              avbrytModal.svarSlett
            </span>
          </button>
        </div>
      </div>
    </dialog>
  </form>
</div>
`;

exports[`Inntekten din Snapshot 1`] = `
<div>
  <form>
    <div
      class="sc-irLvoH eNFBNd"
    >
      <h1
        class="center navds-heading navds-heading--medium"
      >
        inntektenDin.tittel
      </h1>
    </div>
    <fieldset
      class="sc-beyTiQ jltUnl"
    >
      <h1
        class="navds-heading navds-heading--small"
      >
        dinSituasjon.undertittel
      </h1>
      <p
        class="navds-body-long navds-body-long--medium"
      >
        dinSituasjon.ingress
      </p>
    </fieldset>
    <fieldset
      class="sc-beyTiQ jltUnl"
    >
      <div
        class="sc-guDMob czmIqC undefined"
      >
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            class="navds-label"
          >
            knapp.tilbake
          </span>
        </button>
        <button
          class="navds-button navds-button--primary navds-button--medium"
          type="button"
        >
          <span
            class="navds-label"
          >
            knapp.neste
          </span>
        </button>
      </div>
    </fieldset>
    <div
      class="sc-guDMob sc-dmyDmy czmIqC kgmmuh"
    >
      <button
        class="navds-button navds-button--secondary navds-button--medium"
        id="avbryt-btn"
        type="button"
      >
        <span
          class="navds-label"
        >
          knapp.avbryt
        </span>
      </button>
    </div>
    <dialog
      class="navds-modal navds-modal--polyfilled navds-modal--autowidth"
      role="dialog"
    >
      <div
        class="navds-modal__header"
      >
        <button
          class="navds-modal__button navds-button navds-button--tertiary-neutral navds-button--small navds-button--icon-only"
          type="button"
        >
          <span
            class="navds-button__icon"
          >
            <svg
              aria-labelledby="title-r2"
              fill="none"
              focusable="false"
              height="1em"
              role="img"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title
                id="title-r2"
              >
                Lukk modalvindu
              </title>
              <path
                clip-rule="evenodd"
                d="M6.53 5.47a.75.75 0 0 0-1.06 1.06L10.94 12l-5.47 5.47a.75.75 0 1 0 1.06 1.06L12 13.06l5.47 5.47a.75.75 0 1 0 1.06-1.06L13.06 12l5.47-5.47a.75.75 0 0 0-1.06-1.06L12 10.94 6.53 5.47Z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <h1
          class="navds-heading navds-heading--medium"
        >
          avbrytModal.spoersmaal
        </h1>
      </div>
      <div
        class="navds-modal__body"
      >
        <p
          class="mute avbryt-text navds-body-short navds-body-short--medium"
        >
          avbrytModal.informasjon
        </p>
      </div>
      <div
        class="navds-modal__footer"
      >
        <div
          class="sc-jsEeA-d gHwiqO"
        >
          <button
            class="navds-button navds-button--secondary navds-button--medium"
            id="avbryt-nei-btn"
            style="margin: 10px;"
            type="button"
          >
            <span
              class="navds-label"
            >
              avbrytModal.svarNei
            </span>
          </button>
          <button
            class="navds-button navds-button--primary navds-button--medium"
            id="avbryt-ja-btn"
            style="margin: 10px;"
            type="button"
          >
            <span
              class="navds-label"
            >
              avbrytModal.svarJa
            </span>
          </button>
        </div>
        <div
          class="sc-jsEeA-d gHwiqO"
        >
          <button
            class="navds-button navds-button--tertiary navds-button--medium"
            id="slett-soeknad"
            style="color: rgb(198, 93, 78);"
            type="button"
          >
            <span
              class="navds-label"
            >
              avbrytModal.svarSlett
            </span>
          </button>
        </div>
      </div>
    </dialog>
  </form>
</div>
`;
